--- a/index.html
+++ b/index.html
@@ -1361,6 +1361,8 @@
           <li>Non-Preset Generation through Browser results in impossible logic at layer 1 making the seed incompletable.</li>
           <li>Removing Tournament Mode can make seeds take longer to generate.</li>
           <li>Removing Color Randomizer mode from certain presets <i>may</i> cause the preset to be disabled in generation and cause layer 1 logic issues.</li>
+          <li>Potential softlock when starting in the attic above the Richter with Starting Point Randomizer.</li>
+          <li>Incorrect default icons when starting with "null" equipment.</li>
         </ul>
       </div>
     </main>
