Removed Preset Checkbox & Added Complexity Bar + Relic Locations to Presets

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               </div>
               <div id="preset-container">
                 <div id="preset-dropdown">
-                  <label for="preset"><input id="preset" type="checkbox"> Preset:</label>
+                  <label for="preset-select">Preset:</label>
                   <div id="preset-select">
                     <select id="preset-id"></select>
                   </div>
