--- a/index.html
+++ b/index.html
@@ -774,42 +774,51 @@
         </ul>
         <hr>
         <h2><a name="changelog">Changelog</a></h2>
-        <h3><time>April 14, 2025</time></h3>
-        <ul>
-          <h4>Options Changes</h4>
-          <li>Added Alucard Palette Selector.</li>
-          <li>Almost every single randomized / selected palette for Richter, Maria, Dracula, and Alucard was reworked.</li>
-          <li>Removed Guaranteed Drops mode for Bounty Hunter variants (The BH tool breaks drops if enabled).</li>
-          <li>Removed Reverse Library Card for Beyond preset.</li>
-          <h4>Website Updates</h4>
-          <li>Added "Known Bugs" section for transparency.</li>
-        </ul>
-        <h3><time>April 3, 2025</time></h3>
-        <ul>
-          <h4>Hotfix</h4>
-          <li>Fixed Starting Room Randomizer execution from Preset Files.</li>
-        </ul>
-        <h3><time>April 2, 2025</time></h3>
+        <h3><time>May 12, 2025</time></h3>
         <ul>
           <h4>Preset Changes</h4>
-          <li>Added Vanilla preset.</li>
-          <li>Datedupay Litchgay Ogiclay.</li>
+          <li>Come to me, Glitch, son of romscout! Kneel before Eld!</li>
           <h4>Options Changes</h4>
-          <li>Added new option to change seed goals.</li>
-          <li>♦ All Bosses changes the goal to defeat all bosses listed on the time attack table in the vanilla game.</li>
-          <li>♦ All Relics changes the goal to collect all relics in the North American version of the vanilla game.</li>
-          <li>♦ All Bosses and Relics changes the goal to defeat all bosses and collect all relics as above.</li>
-          <li>Added Guaranteed Drops Option (3/14/2025).</li>
-          <li>Added Reverse Library Cards Option.</li>
-          <li>Added Alucard Palette Randomizer Option.</li>
-          <li>Added Richter Palette Randomizer to Color Randomizer.</li>
-          <h4>Program Updates</h4>
-          <li>Fix an issue that prevented SOTN.io from generating seeds after a previous seed was downloaded.</li>
-          <li>Added a way for the randomizer to start setting aside ISO memory and RAM to execute complex functions in ASM.</li>
-          <li>Now the randomizer loads 14 sectors fropm the ISO automatically. Three are reserved for options, eleven sectors are for presets.</li>
+          <li>Allowed players to generate custom relic extensions and complexity levels with all presets.</li>
+          <li>Removed preset tickbox because all features locked behind it are now available.</li>
+          <li>Removed extensions options for presets which can't use them.</li>
         </ul>
         <a id="show-older" href="#older">Show older changes</a>
         <div id="older" class="hidden">
+          <h3><time>April 14, 2025</time></h3>
+          <ul>
+            <h4>Options Changes</h4>
+            <li>Added Alucard Palette Selector.</li>
+            <li>Almost every single randomized / selected palette for Richter, Maria, Dracula, and Alucard was reworked.</li>
+            <li>Removed Guaranteed Drops mode for Bounty Hunter variants (The BH tool breaks drops if enabled).</li>
+            <li>Removed Reverse Library Card for Beyond preset.</li>
+            <h4>Website Updates</h4>
+            <li>Added "Known Bugs" section for transparency.</li>
+          </ul>
+          <h3><time>April 3, 2025</time></h3>
+          <ul>
+            <h4>Hotfix</h4>
+            <li>Fixed Starting Room Randomizer execution from Preset Files.</li>
+          </ul>
+          <h3><time>April 2, 2025</time></h3>
+          <ul>
+            <h4>Preset Changes</h4>
+            <li>Added Vanilla preset.</li>
+            <li>Datedupay Litchgay Ogiclay.</li>
+            <h4>Options Changes</h4>
+            <li>Added new option to change seed goals.</li>
+            <li>♦ All Bosses changes the goal to defeat all bosses listed on the time attack table in the vanilla game.</li>
+            <li>♦ All Relics changes the goal to collect all relics in the North American version of the vanilla game.</li>
+            <li>♦ All Bosses and Relics changes the goal to defeat all bosses and collect all relics as above.</li>
+            <li>Added Guaranteed Drops Option (3/14/2025).</li>
+            <li>Added Reverse Library Cards Option.</li>
+            <li>Added Alucard Palette Randomizer Option.</li>
+            <li>Added Richter Palette Randomizer to Color Randomizer.</li>
+            <h4>Program Updates</h4>
+            <li>Fix an issue that prevented SOTN.io from generating seeds after a previous seed was downloaded.</li>
+            <li>Added a way for the randomizer to start setting aside ISO memory and RAM to execute complex functions in ASM.</li>
+            <li>Now the randomizer loads 14 sectors fropm the ISO automatically. Three are reserved for options, eleven sectors are for presets.</li>
+          </ul>
           <h3><time>March 10, 2025</time></h3>
           <ul>
             <h4>Preset Changes</h4>
@@ -1358,9 +1367,7 @@
         </div>
         <h2>Known Bugs</h2>
         <ul>
-          <li>Non-Preset Generation through Browser results in impossible logic at layer 1 making the seed incompletable.</li>
           <li>Removing Tournament Mode can make seeds take longer to generate.</li>
-          <li>Removing Color Randomizer mode from certain presets <i>may</i> cause the preset to be disabled in generation and cause layer 1 logic issues.</li>
           <li>Potential softlock when starting in the attic above the Richter with Starting Point Randomizer.</li>
           <li>Incorrect default icons when starting with "null" equipment.</li>
         </ul>
