Fixed Start Room Rando
Fixed starting room rando in browser.js and util.js. castleFlag was being set in Browser and then, somehow, got re-overwritten. I replaced it and now it functions.

--- a/index.html
+++ b/index.html
@@ -782,6 +782,7 @@
           <li>Allowed players to generate custom relic extensions and complexity levels with all presets.</li>
           <li>Removed preset tickbox because all features locked behind it are now available.</li>
           <li>Removed extensions options for presets which can't use them.</li>
+          <li>Corrected an error where a variable was not set when generating through the website for Random Starting Room.</li>
         </ul>
         <a id="show-older" href="#older">Show older changes</a>
         <div id="older" class="hidden">
