--- a/index.html
+++ b/index.html
@@ -783,6 +783,8 @@
           <li>Removed preset tickbox because all features locked behind it are now available.</li>
           <li>Removed extensions options for presets which can't use them.</li>
           <li>Corrected an error where a variable was not set when generating through the website for Random Starting Room.</li>
+          <h4>Program Updates</h4>
+          <li>Added randomized splash phrases to the title screen.</li>
         </ul>
         <a id="show-older" href="#older">Show older changes</a>
         <div id="older" class="hidden">
