Add wolf Palette changer to alucard palette selector
Adding wolf to alucard Palette selector, also updated the html to drop alucard's liner to its own line to make it more consistent on smaller screens

--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                 <div class="pure-u-12-24">
                   <label for="alucardPalette">Alucard's palette</label>
                 </div>
-                <div class="pure-u-6-24">
+                <div class="pure-u-12-24">
                   <select id="alucardPalette" type="checkbox">
                     <option value="default">Default</option>
                     <option value="bloodytears">Bloody Tears</option>
@@ -390,7 +390,10 @@
                     <option value="pinkpassion">Pink Passion</option>
                   </select>
                 </div>
-                <div class="pure-u-6-24">
+                <div class="pure-u-12-24">
+                  <label for="alucardLiner">Alucard's Liner</label>
+                </div>
+                <div class="pure-u-12-24">
                   <select id="alucardLiner" type="checkbox">
                     <option value="gold">Gold Liner (default)</option>
                     <option value="bronze">Bronze Liner</option>
