--- a/index.html
+++ b/index.html
@@ -785,6 +785,7 @@
           <li>Allowed players to generate custom relic extensions and complexity levels with all presets.</li>
           <li>Removed preset tickbox because all features locked behind it are now available.</li>
           <li>Removed extensions options for presets which can't use them.</li>
+          <li>Added palettes for Wolf form to match Alucard palettes.</li>
           <li>Corrected an error where a variable was not set when generating through the website for Random Starting Room.</li>
           <h4>Program Updates</h4>
           <li>Added randomized splash phrases to the title screen.</li>
