website fix and removing incompatible splash text

--- a/index.html
+++ b/index.html
@@ -789,6 +789,8 @@
           <li>Corrected an error where a variable was not set when generating through the website for Random Starting Room.</li>
           <h4>Program Updates</h4>
           <li>Added randomized splash phrases to the title screen.</li>
+          <h4>Website Updates</h4>
+          <li>Fixed a bug where the complexity inner text wasn't updatring causing misunderstandings about the complexity of the current preset.</li>
         </ul>
         <a id="show-older" href="#older">Show older changes</a>
         <div id="older" class="hidden">
