Add all bosses and all Vlads mode.

--- a/index.html
+++ b/index.html
@@ -364,6 +364,7 @@
                     <option value="allBoss">All Bosses</option>
                     <option value="allRelic">All Relics</option>
                     <option value="abrsr">All Bosses & Relics</option>
+                    <option value="vladBoss">All Bosses & Vlad Relics</option>
                   </select>
                   <span class="tooltip-wrapper">
                     <span class="tooltip-indicator">?</span>
@@ -787,6 +788,7 @@
           <li>Removed extensions options for presets which can't use them.</li>
           <li>Added palettes for Wolf form to match Alucard palettes.</li>
           <li>Corrected an error where a variable was not set when generating through the website for Random Starting Room.</li>
+          <li>Added an additional goal to update the game to: All Bosses and all Vlads.</li>
           <h4>Program Updates</h4>
           <li>Added randomized splash phrases to the title screen.</li>
           <h4>Website Updates</h4>
