re-worked Color Rando for Capes

--- a/index.html
+++ b/index.html
@@ -61,8 +61,12 @@
           <a class="contact" href="https://twitch.tv/MottZilla0">
             <img height="16" width="16"
                  src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/twitch.svg"></a>
-          , and SacredLucy
+          , SacredLucy
           <a class="contact" href="https://twitch.tv/sacredlucyy">
+            <img height="16" width="16"
+                src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/twitch.svg"></a>
+          , and CRAZY4BLADES
+          <a class="contact" href="https://twitch.tv/crazy4bladestv">
             <img height="16" width="16"
                 src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/twitch.svg"></a>
         </div>
@@ -789,6 +793,8 @@
           <li>Added palettes for Wolf form to match Alucard palettes.</li>
           <li>Corrected an error where a variable was not set when generating through the website for Random Starting Room.</li>
           <li>Added an additional goal to update the game to: All Bosses and all Vlads.</li>
+          <li>Removed potential softlock from starting in Castle Keep attic in Starting Room Randomizer.</li>
+          <li>Updated Color Randomizer to use hue-shifting for capes proposed by Wecoc.</li>
           <h4>Program Updates</h4>
           <li>Added randomized splash phrases to the title screen.</li>
           <h4>Website Updates</h4>
@@ -1379,7 +1385,6 @@
         <h2>Known Bugs</h2>
         <ul>
           <li>Removing Tournament Mode can make seeds take longer to generate.</li>
-          <li>Potential softlock when starting in the attic above the Richter with Starting Point Randomizer.</li>
           <li>Incorrect default icons when starting with "null" equipment.</li>
         </ul>
       </div>
