Added Second Castle Starting Room Randomizer to Chaos-Lite.

--- a/index.html
+++ b/index.html
@@ -785,6 +785,7 @@
         <h3><time>May 12, 2025</time></h3>
         <ul>
           <h4>Preset Changes</h4>
+          <li>Added Second Castle Starting Room Randomizer to Chaos-Lite.</li>
           <li>Come to me, Glitch, son of romscout! Kneel before Eld!</li>
           <h4>Options Changes</h4>
           <li>Allowed players to generate custom relic extensions and complexity levels with all presets.</li>
