--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
                 </div>
                 <div class="pure-u-1-2">
                   <input id="stats" type="checkbox">
-                  <label for="stats">Item stats</label>
+                  <label for="stats">Item Stats</label>
                 </div>
                 <div class="pure-u-1-2">
                   <input id="unlocked-mode" type="checkbox">
@@ -585,7 +585,7 @@
                 </div>
                 <div class="pure-u-1-2">
                   <input id="itemnamerando-mode" type="checkbox">
-                  <label for="itemnamerando-mode">Item stats names randomized
+                  <label for="itemnamerando-mode">Item Names
                     <span class="tooltip-wrapper">
                       <span class="tooltip-indicator">?</span>
                       <span class="tooltip hidden">
