Adding Randomizer Logo
Adds randomizer logo to the top of the page.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
   <body>
     <div class="navbar">
       <ul class="nav-links">
-        <img src="images/ICON.jpg" />
           <li class="nav-item"><a href="#">Randomizer</a></li>
           <li class="nav-item"><a href="/faq">FAQ</a></li>
           <li class="nav-item"><a href="https://ppf.sotn.io">PPF Patcher</a></li>
@@ -40,7 +39,7 @@
     <div id="version"></div>
     <main>
       <div id="content" class="pure-u-lg-20-24 pure-u-xl-19-24 pure-u-xxl-18-24">
-        <h1>Castlevania: Symphony of the Night Randomizer</h1>
+        <img src = "images/logo.png" class = "center">
         <div>
           by Wild Mouse,
           <a class="contact" href="https://twitter.com/3snow_p7im">
