--- a/index.html
+++ b/index.html
@@ -832,6 +832,7 @@
           <li>Allowed players to generate custom relic extensions and complexity levels with all presets.</li>
           <li>Fixed a bug where the complexity inner text wasn't updatring causing misunderstandings about the complexity of the current preset.</li>
           <li>Added the SOTNRando icon to the navigation bar.</li>
+          <li>Added the SOTNRando header image courtesy of DarkFalzJoker to the top of the site.</li>
           <li>Added a new section to help players identify which palettes they might wish to use for their Alucard and Map sprites.</li>
         </ul>
         <a id="show-older" href="#older">Show older changes</a>
