--- a/index.html
+++ b/index.html
@@ -342,23 +342,6 @@
             <fieldset class="pure-u-lg-1-3">
               <legend>Options</legend>
               <div class="pure-g">
-                <div class="pure-u-12-24">
-                  <label for="mapColor">Map Color</label>
-                </div>
-                <div class="pure-u-12-24">
-                  <select id="mapColor" type="checkbox">
-                    <option value="normal">Normal</option>
-                    <option value="blue">Dark Blue</option>
-                    <option value="green">Hunter Green</option>
-                    <option value="red">Crimson</option>
-                    <option value="brown">Brown</option>
-                    <option value="purple">Purple</option>
-                    <option value="grey">Grey</option>
-                    <option value="pink">Pink</option>
-                    <option value="black">Black</option>
-                    <option value="invis">Invisible</option>
-                  </select>
-                </div>
                 
                 <div class="pure-u-12-24">
                   <label for="newGoals">Change Goals</label>
@@ -381,32 +364,6 @@
                       </span>
                     </span>
                   </span>
-                </div>
-                <div class="pure-u-12-24">
-                  <label for="alucardPalette">Alucard's palette</label>
-                </div>
-                <div class="pure-u-12-24">
-                  <select id="alucardPalette" type="checkbox">
-                    <option value="default">Default</option>
-                    <option value="bloodytears">Bloody Tears</option>
-                    <option value="bluedanube">Blue Danube</option>
-                    <option value="swampthing">Swamp Thing</option>
-                    <option value="whiteknight">White Knight</option>
-                    <option value="royalpurple">Royal Purple</option>
-                    <option value="pinkpassion">Pink Passion</option>
-                  </select>
-                </div>
-                <div class="pure-u-12-24">
-                  <label for="alucardLiner">Alucard's Liner</label>
-                </div>
-                <div class="pure-u-12-24">
-                  <select id="alucardLiner" type="checkbox">
-                    <option value="gold">Gold Liner (default)</option>
-                    <option value="bronze">Bronze Liner</option>
-                    <option value="silver">Silver Liner</option>
-                    <option value="onyx">Onyx Liner</option>
-                    <option value="coral">Coral Liner</option>
-                  </select>
                 </div>
                 <div class="pure-u-1"></div>
                 <div class="pure-u-1-2">
@@ -739,31 +696,39 @@
             </fieldset>
             <fieldset class="pure-u-lg-1-3">
               <legend>Customizations</legend>
-              <div class="pure-u-1-5">Default Palette<img src = "images/default palette.png" /></div>
-                <div class="pure-u-1-5">Bloody - Tears <img src = "images/bloody tears palette.png" /></div>
-                <div class="pure-u-1-5">Blue - Danube <img src = "images/Blue Danube Palette.png" /></div>
-                <div class="pure-u-1-5">Swamp - Thing <img src = "images/Swamp Thing Palette.png" /></div>
-                <div class="pure-u-1-5">White Knight <img src = "images/White Knight Palette.png" /></div>
-                <div class="pure-u-1-5">Royal Purple <img src = "images/Royal Purple Palette.png" /></div>
-                <div class="pure-u-1-5">Pink Passion <img src = "images/Pink Passion Palette.png" /></div>
-                <div class="pure-u-1-5"></div>
-                <div class="pure-u-1-5">Default Liner <img src = "images/Default Liner.png"/></div>
-                <div class="pure-u-1-5">Bronze Liner <img src = "images/Bronze Liner.png"/></div>
-                <div class="pure-u-1-5">Silver Liner <img src = "images/Silver Liner.png"/></div>
-                <div class="pure-u-1-5">Onyx Liner <img src = "images/Onyx Liner.png"/></div>
-                <div class="pure-u-1-5">Coral Liner <img src = "images/Coral Liner.png"/></div>
-                <div class="pure-u-1-5"></div>
-                <div class="pure-u-1-5"></div>
-                <div class="pure-u-1-5"></div>
-                <div class="pure-u-1-5">Default Map <img src = "images/Default Map.png"/></div>
-                <div class="pure-u-1-5">Dark Blue <img src = "images/Dark Blue Map.png"/></div>
-                <div class="pure-u-1-5">Green <img src = "images/Green.png"/></div>
-                <div class="pure-u-1-5">Crimson<img src = "images/Crimson.png"/></div>
-                <div class="pure-u-1-5">Brown <img src = "images/Brown Map.png"/></div>
-                <div class="pure-u-1-5">Purple <img src = "images/Purple Map.png"/></div>
-                <div class="pure-u-1-5">Grey  <img src = "images/Gray Map.png"/></div>
-                <div class="pure-u-1-5">Pink <img src = "images/Pink Map.png"/></div>
-                <div class="pure-u-1-5">Black <img src = "images/Black Map.png"/></div>
+                 <tr><td>Map Color<select id="mapColor" type="checkbox">
+                    <option value="normal">Normal</option>
+                    <option value="blue">Dark Blue</option>
+                    <option value="red">Crimson</option>
+                    <option value="brown">Brown</option>
+                    <option value="green">Hunter Green</option>
+                    <option value="grey">Grey</option>
+                    <option value="purple">Purple</option>
+                    <option value="pink">Pink</option>
+                    <option value="black">Black</option>
+                  </select></td></tr>
+              <table class="filter_langs">
+                <tr><td>Alucard's Palette:</td><td><select id="alucardPalette" type="checkbox">
+                  <option value="default">Default</option>
+                  <option value="bloodytears">Bloody Tears</option>
+                  <option value="bluedanube">Blue Danube</option>
+                  <option value="swampthing">Swamp Thing</option>
+                  <option value="whiteknight">White Knight</option>
+                  <option value="royalpurple">Royal Purple</option>
+                  <option value="pinkpassion">Pink Passion</option>
+                </select></td></tr>
+                <tr><td>Alucard's Liner:</td><td><select id="alucardLiner" type="checkbox">
+                  <option value="gold">Gold Liner (default)</option>
+                  <option value="bronze">Bronze Liner</option>
+                  <option value="silver">Silver Liner</option>
+                  <option value="onyx">Onyx Liner</option>
+                  <option value="coral">Coral Liner</option>
+                </select></td></tr>
+              </table><br/><div style="width:48px; height:32px"></div>
+              <div id="mapColorDisplay" style="width:48px; height:32px; background: url(https://i.servimg.com/u/f81/20/40/06/51/map_pa10.png);"/>
+              </table><br/><div style="width:96px; height:64px">
+                <div id="alucardPaletteDisplay" style="width:96px; height:64px; background: url(https://i.servimg.com/u/f81/20/40/06/51/alucar10.png);"/>
+                <div id="alucardLinerDisplay" style="width:96px; height:64px; background: url(https://i.servimg.com/u/f81/20/40/06/51/alucar10.png);"/>
             </fieldset>
           </div>
                
