update to theme location
Moved theme dropdown to the right

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
         <div class="pure-u-1-4"></div>
         <div class="pure-u-1-4"></div>
-        <div class="pure-u-1-4">
+        <div class="right">
           <label for="theme">Theme</label>  
           <select id="theme" type="checkbox">
             <option value="menu">Menu</option>
