--- a/index.html
+++ b/index.html
@@ -728,6 +728,7 @@
               </table><br/><div style="zoom: 200%; image-rendering: pixelated; width:96px; height:64px">
                 <div id="alucardPaletteDisplay" style="width:96px; height:64px; background: url(https://i.servimg.com/u/f81/20/40/06/51/alucar10.png);"/>
                 <div id="alucardLinerDisplay" style="width:96px; height:64px; background: url(https://i.servimg.com/u/f81/20/40/06/51/alucar10.png);"/>
+                </div>
             </fieldset>
           </div>
                
