fixed splash text apostrophes

--- a/index.html
+++ b/index.html
@@ -795,10 +795,10 @@
           <li>Added randomized splash phrases to the game title screen.</li>
           <h4>Website Updates</h4>
           <li>Allowed players to generate custom relic extensions and complexity levels with all presets.</li>
-          <li>Fixed a bug where the complexity inner text wasn't updatring causing misunderstandings about the complexity of the current preset.</li>
+          <li>Fixed a bug where the complexity inner text wasn't updating causing misunderstandings about the complexity of the selected preset.</li>
           <li>Added the SOTNRando icon to the navigation bar.</li>
           <li>Added the SOTNRando header image courtesy of DarkFalzJoker to the top of the site.</li>
-          <li>Added a new section to help players identify which palettes they might wish to use for their Alucard and Map sprites.</li>
+          <li>Added a new section to help players preview which palettes they might wish to use for their Alucard and Map sprites.</li>
         </ul>
         <a id="show-older" href="#older">Show older changes</a>
         <div id="older" class="hidden">
