--- a/index.html
+++ b/index.html
@@ -782,6 +782,7 @@
           <li>Added Second Castle Starting Room Randomizer to Chaos-Lite.</li>
           <li>Familiar cards are no longer given to the player "active" in Timeline.</li>
           <li>Timeline's timer no longer pauses in the menu.*</li>
+          <li>Added code to give the player a Toadstool at the beginning of Big Toss.</li>
           <li>Come to me, Glitch, son of romscout! Kneel before Eld!</li>
           <h4>Options Changes</h4>
           <li>Removed preset tickbox because all features locked behind it are now available.</li>
@@ -798,7 +799,8 @@
           <li>Fixed a bug where the complexity inner text wasn't updating causing misunderstandings about the complexity of the selected preset.</li>
           <li>Added the SOTNRando icon to the navigation bar.</li>
           <li>Added the SOTNRando header image courtesy of DarkFalzJoker to the top of the site.</li>
-          <li>Added a new section to help players preview which palettes they might wish to use for their Alucard and Map sprites.</li>
+          <li>Added a new section to help players preview which customizations they might wish to use for their Alucard and Map sprites.</li>
+          <li>Added visual effects to the navigation bar for a more satisfying experience.</li>
         </ul>
         <a id="show-older" href="#older">Show older changes</a>
         <div id="older" class="hidden">
